--- a/app/static/css/lander.css
+++ b/app/static/css/lander.css
@@ -69,8 +69,7 @@ nav {
 }
 
 .card {
-  max-width: 50%;
-  margin: 20px auto;
+  width: 100%;
 }
 
 .card-match {
@@ -88,4 +87,20 @@ nav {
   padding: 40px 100px;
   margin: auto;
   text-align: center;
+}
+
+.vnav {
+  height: 100vh;
+  max-width: 15%;
+  float: left;
+  position: fixed;
+}
+
+.full-main-dashboard {
+  padding: 0;
+  margin: 0;
+  width: 85%;
+  height: 90vh;
+  float: right;
+  clear: none;
 }
