--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,5 +1,34 @@
-{% extends 'base.html' %}{% block content %}{% include 'dashnav.html' %}
-<div class="full-main">
+{% extends 'base.html' %}{% set active_page = "index" %}{% block content %}{% include 'dashnav.html' %}
+<div class="full-main-dashboard" data-aos="fade-up">
   <h1>Welcome Back, {{session['username']}}</h1>
+  <div class="row gx-5 p-5">
+    <div class="col">
+      <div class="card p-3">
+        <h2>Donations</h2>
+        <h5>Total Donations: <span style="color: green">$20</span></h5>
+        <h5>Current Cause: TeamSeas</h5>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card p-3">
+        <h2>Pot</h2>
+        <h5>Current Pot: $2</h5>
+        <h5>Until Next Donation: $18</h5>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card p-3">
+          <h2>Events</h2>
+          <h5>Largest Events</h5>
+          <p>TeamSeas: <b>$500</b></p>
+          <p>StJudes: <b>$270</b></p>
+          <p>TuringTrust: <b>$90</b></p>
+          <a href="{{ url_for('createEvent') }}" class="pt-2"
+            >Create an event</a
+          >
+        </div>
+      </div>
+    </div>
   </div>
-{% endblock %}
+  {% endblock %}
+</div>
