--- a/app/templates/dashnav.html
+++ b/app/templates/dashnav.html
@@ -1,7 +1,63 @@
+<div
+  class="d-flex flex-column flex-shrink-0 p-3 bg-light vnav"
+  style="width: 280px"
+>
+  <a
+    href="{{url_for('dashboard')}}"
+    class="
+      d-flex
+      align-items-center
+      mb-3 mb-md-0
+      me-md-auto
+      link-dark
+      text-decoration-none
+    "
+  >
+    <img src="../static/img/logo.svg" width="150" />
+  </a>
+  <hr />
+  <ul class="nav nav-pills flex-column mb-auto">
+    <li class="nav-item" style="text-align: left">
+      <a
+        href="{{url_for('dashboard')}}"
+        class="{{ 'nav-link active' if active_page == 'index' else 'nav-link link-dark' }}"
+        aria-current="page"
+      >
+        <i class="fas fa-home"></i>
+        Dashboard
+      </a>
+    </li>
+    <li class="nav-item" style="text-align: left">
+      <a
+        href="{{url_for('createEvent')}}"
+        class="{{ 'nav-link active' if active_page == 'createEvent' else 'nav-link link-dark' }}"
+      >
+        <i class="fas fa-hand-holding-usd"></i>
+        New Event
+      </a>
+    </li>
+    <li class="nav-item" style="text-align: left">
+      <a
+        href="#"
+        class="{{ 'nav-link active' if active_page == 'stats' else 'nav-link link-dark' }}"
+      >
+        <i class="fas fa-tachometer-alt"></i>
+        My Stats
+      </a>
+    </li>
+    <li class="nav-item" style="text-align: left">
+      <a
+        href="#"
+        class="{{ 'nav-link active' if active_page == 'shop' else 'nav-link link-dark' }}"
+      >
+        <i class="fas fa-cog"></i>
+        Settings
+      </a>
+    </li>
+  </ul>
+</div>
+
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="{{ url_for('index') }}"
-    ><img class="nav-logo" src="../static/img/logo.svg"
-  /></a>
   <button
     class="navbar-toggler"
     type="button"
