change to cockroarchdb

--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -30,6 +30,9 @@ include 'dashnav.html' %}
     style="float: right; text-align: center; width: 50%; padding: 10px"
   >
     <h2>Donation History</h2>
+    <p>Michael: $20</p>
+    <p>Job: $20</p>
+    <p>Job: $20</p>
   </div>
   {% endblock %}
 </div>
